<resources>
    <string name="app_name">DeptRegistration</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome!!!</string>
    <string name="registerButton">Register</string>
    <string name="name_label">Name:\n</string>
    <string name="email_label">Email:</string>
    <string name="id_label">ID:</string>
    <string name="dept_label">Dept:</string>
    <string name="select_dept_button">Select</string>
    <string name="submit_button">SUBMIT</string>
    <string name="CS_label">Computer Science</string>
    <string name="SIS_label">Software and Info. Systems</string>
    <string name="bio_label">Bio Informatics</string>
    <string name="DS_label">Data Science</string>
    <string name="cancel_label">CANCEL</string>
    <string name="select_label">SELECT</string>


</resources>